assets/css/style.css
h1,h2,h3,h4,h5,h6 {
  color: #4B4055;
  letter-spacing: 10px;
}
h1 small {
  color: #7D6592;
  letter-spacing: 17px;
}
.header-wrapper {
  padding: 10px 0;
  background-color: #FBEC2F;
}
header > * {
  text-transform: uppercase;;
  float: left;
  padding-right: 20px;
}
#logo {
  width: 170px;
}
.bird_apps_title {
  padding: 10px 0;
  width: 160px;
  text-align: justify;
}
.what-we-do {
  text-align: center;
  font-size: 1.5em;
  padding-top: 20px;
}
img#the_web {
  width: 100%;
  max-width: 300px;
}
.ampersand {
  font-size: 2.5em;
  text-align: right;
}
img#the_mobile {
  width: 100%;
  max-width: 170px;
}

section {
  padding-top: 20px;
  padding-bottom: 20px;
}

@media screen and (min-width: 769px) {
  .powerful-apps {
    text-align: right;
  }
}
@media screen and (max-width: 768px) {
  #logo {
    width: 120px;
  }
  .bird_apps_title, .bird_apps_title h1 {
    padding: 0;
    margin: 0;
  }
}

